[package]
name = "near-chunks"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
near-primitives = { path = "../../core/primitives" }
near-network = { path = "../network" }
near-chain = { path = "../chain" }
typed-arena = "1.4.1"
futures = "0.1.25"
tokio = "0.1"
rand = "0.6"
rand_xorshift = "0.1"
chrono = "0.4.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
elapsed = "0.1"
protobuf = "2.4"
reed-solomon-erasure = "3.1.1"
crossbeam = "0.3.0"
